# PWAWikimediaCommonsUploader

./: .gitignore  Aptfile  Cargo.toml  Procfile  README.md  RustConfig  eslint.config.js  index.html  package-lock.json  package.json  project.toml  sonar-project.properties  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
converter/src/: commons.rs  config.rs  error.rs  main.rs  media.rs
public/: manifest.webmanifest
scripts/: icons.mjs  postbuild.mjs  start-converter.sh  toolforge-deploy.sh  toolforge-logs.sh
src/: api.ts  apierrors.ts  config.ts  exif.ts  geo.ts  idb.ts  keepawake.ts  main.ts  naming.ts  oauth.ts  prefs.ts  queue.ts  style.css  sw-template.js  types.ts  wikitext.ts
src/ui/: app.ts  catinput.ts  dom.ts  filesview.ts  nearby.ts  prefsview.ts
tests/: api.test.ts  apierrors.test.ts  exif.test.ts  geo.test.ts  naming.test.ts  oauth.test.ts  prefs.test.ts  queue.test.ts  stubs.ts  wikitext.test.ts
toolforge/: service.template
