[package]
name = "commons-format-converter"
version = "1.1.9"
edition = "2024"
rust-version = "1.85"
description = "Toolforge conversion and upload service for the PWA Wikimedia Commons Uploader"
license = "MIT"
publish = false

[[bin]]
name = "commons-format-converter"
path = "converter/src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
